--- a/Particle-Core-Gesture-master/web/index.html
+++ b/Particle-Core-Gesture-master/web/index.html
@@ -50,8 +50,8 @@
 		slider.addBulletNav();
 		slider.addCaptions();
 		
-		var deviceID = "<<deviceid>>";
-		var accessToken = "<accesstoken>>";
+		var deviceID = "<<300019000447343337373738>>";
+		var accessToken = "<9687668ecddaf88b3521ef0df7243a8385e97f03>>";
 		var event_name = "GESTURE-EVENT";
 		var eventSource = new EventSource("https://api.spark.io/v1/devices/" + deviceID + "/events/?access_token=" + accessToken);
 
